@@ -107,6 +107,7 @@ Hartley Sweeten
 Marcel Telka
 Steve Tell
 Mike Tesch
+Scott Tsai
 Michael Vacek
 Ville Voipio
 David Vrabel
